--- a/config.toml
+++ b/config.toml
@@ -1,8 +1,8 @@
-project_name = "INPs_sinusoids"
+project_name = "NS_INPs_v3"
 seed = 0
 load_it = "best"
-batch_size = 64
-num_epochs = 1000
+batch_size = 32
+num_epochs = 200
 sort_context = false
 lr = 0.001
 decay_lr = 10
@@ -10,20 +10,20 @@ train_split = "train"
 val_split = "val"
 n_trials = 1
 beta = 1
-dataset = "set-trending-sinusoids-dist-shift"
-knowledge_type = "b"
+dataset = "symbolic-sinusoids"
+knowledge_type = "symbolic_full"
 min_num_context = 0
-max_num_context = 10
+max_num_context = 100
 num_targets = 100
-noise = 0.2
+noise = 0
 x_sampler = "uniform"
 use_knowledge = true
-text_encoder = "set"
+text_encoder = "symbolic"
 freeze_llm = true
 tune_llm_layer_norms = false
 train_num_z_samples = 1
-test_num_z_samples = 32
-knowledge_dropout = 0.3
+test_num_z_samples = 16
+knowledge_dropout = 0.1
 input_dim = 1
 output_dim = 1
 hidden_dim = 128
@@ -41,7 +41,15 @@ x_encoder_num_hidden = 1
 path = "latent"
 knowledge_extractor_num_hidden = 2
 knowledge_extractor_hidden_dim = 128
-knowledge_merge = "sum"
+knowledge_merge = "concat"
 knowledge_dim = 128
-run_name_prefix = "inp_b_dist_shift"
+model_type = "nsinp"
+equation_vocab_size = 64
+equation_max_len = 50
+use_gating = true
+gating_hidden_dim = 64
+gating_init_bias = 1.0
+aux_loss_weight = 1.0
+contrastive_loss_weight = 0.5
+run_name_prefix = "nsinp_v3_full"
 run_name_suffix = "tuned"
